⚡ Menambahkan 2 Jobs baru dan membuat Jobs compatibility dengan PlaceholderAPI ⚡